# tempro

./: Cargo.toml
src/: cli.rs  file.rs  lib.rs  main.rs  template.rs  test_utils.rs
src/command/: apply.rs  check.rs  list.rs  mod.rs
src/template/: apply.rs  load.rs  meta.rs  mod.rs
src/test_utils/: mod.rs  temp_wd.rs
src/test_utils/matchers/: dir_exist_matcher.rs  file_content_matcher.rs  file_exist_matcher.rs  mod.rs
